--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "npx tailwindcss -i resources/css/filament-exceptions.css -o resources/dist/filament-exceptions.css --postcss --watch",
-        "build": "npx tailwindcss -i resources/css/filament-exceptions.css -o resources/dist/filament-exceptions.css --postcss --minify && npm run purge",
+        "dev": "npx @tailwindcss/cli -i resources/css/filament-exceptions.css -o resources/dist/filament-exceptions.css --watch",
+        "build": "npx @tailwindcss/cli -i resources/css/filament-exceptions.css -o resources/dist/filament-exceptions.css --minify && npm run purge",
         "purge": "filament-purge -i resources/dist/filament-exceptions.css -o resources/dist/filament-exceptions.css -v 3.x",
         "prettier": "npx prettier --write .",
         "deploy": "npm run build && npm run prettier"
@@ -18,7 +18,7 @@
         "postcss-import": "^15.1.0",
         "prettier": "^3.0.0",
         "prettier-plugin-blade": "^1.6.10",
-        "prettier-plugin-tailwindcss": "^0.4.1",
-        "tailwindcss": "^3.3.3"
+        "prettier-plugin-tailwindcss": "^0.6.14",
+        "tailwindcss": "^4.1.11"
     }
 }
